# combined_cycle_power_plant

./: Makefile  README.md  app.py  pyproject.toml  requirements.txt
combined_cycle_power_plant/: __init__.py  dataset.py  features.py  plots.py
combined_cycle_power_plant/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01_Initial_EDA.ipynb  02_auto_EDA.ipynb  xgboost_model.pkl
