[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "combined_cycle_power_plant"
version = "0.0.1"
description = "This is a Thermal Power Plant ML Project"
authors = [
  { name = "Saptarshi Sanyal" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["combined_cycle_power_plant"]
force_sort_within_sections = true
